.metadata/.plugins/org.eclipse.cdt.ui/Connect_K_AI.build.log
17:01:43 **** Incremental Build of configuration Debug for project Connect_K_AI ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o AIShell.o "..\\AIShell.cpp" 
In file included from ..\AIShell.cpp:1:0:
..\AIShell.h:57:20: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  int depth_limit = 2;
                    ^
..\AIShell.cpp: In member function 'GameTree<int**>* AIShell::generatestates(GameTree<int**>*)':
..\AIShell.cpp:101:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
..\AIShell.cpp: In member function 'AiMove AIShell::getbestmove(int**, int, int)':
..\AIShell.cpp:417:29: error: 'getscore' was not declared in this scope
      return AiMove(getscore()); /// getting score of the currentstate
                             ^
..\AIShell.cpp:431:64: error: 'getBestMove' was not declared in this scope
                     move.score = getBestMove(board, -1, depth+1).score;
                                                                ^
..\AIShell.cpp:433:63: error: 'getBestMove' was not declared in this scope
                     move.score = getBestMove(board, 1, depth+1).score;
                                                               ^
..\AIShell.cpp:445:40: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         for (int i = 0; i < moves.size(); i++) {
                                        ^
..\AIShell.cpp:453:40: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         for (int i = 0; i < moves.size(); i++) {
                                        ^

17:01:44 Build Finished (took 993ms)

